tests/compile_fail/max_timers_256.c
#define MTIMER_MAX_TIMERS 256
#include "../../include/mtimer_config.h"

int main(void)
{
    return 0;
}
